# iyes_perf_ui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: custom.rs  custom_minimal.rs  fps_minimalist.rs  settings.rs  simple.rs  specific_entries.rs  toggle.rs
src/: diagnostics.rs  entries.rs  entry.rs  lib.rs  time.rs  ui.rs  utils.rs  widgets.rs  window.rs
src/entries/: diagnostics.rs  mod.rs  render.rs  time.rs  window.rs
src/ui/: root.rs  widget.rs
src/widgets/: bar.rs
