[package]
name = "iyes_perf_ui"
version = "0.2.3"
authors = ["Ida 'Iyes'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_perf_ui"
homepage = "https://github.com/IyesGames/iyes_perf_ui"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "Customizable Performance/Debug Overlay for Bevy UI"
exclude = ["assets/*", "screenshots/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["entries"]
# Enable the collection of built-in / predefined Perf UI Entries
entries = []
# Enable optional `chrono` dependency for timezone support in the Clock entry
chrono = ["dep:chrono"]

[dependencies.bevy]
version = "0.14.0-rc.2"
default-features = false
features = ["bevy_ui", "sysinfo_plugin"]

[dependencies.chrono]
version = "0.4.35"
optional = true
default-features = false
features = ["clock"]

[dev-dependencies.bevy]
version = "0.14.0-rc.2"
default-features = true
