[package]
name = "iyes_perf_ui"
version = "0.4.0"
authors = ["Ida 'Iyes'"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_perf_ui"
homepage = "https://github.com/IyesGames/iyes_perf_ui"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "Customizable Performance/Debug Overlay for Bevy UI"
exclude = ["assets/*", "screenshots/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "entries", "widgets", "sysinfo", "chrono" ]
# Enable the collection of built-in Perf UI Entries
entries = []
# Enable the collection of additional built-in Perf UI Widgets
widgets = []
sysinfo = ["bevy/sysinfo_plugin", "bevy/multi_threaded"]
# Enable optional `chrono` dependency for timezone support in the Clock entry
chrono = ["dep:chrono"]

[dependencies]
num-traits = "0.2.19"

[dependencies.bevy]
version = "0.15.0"
default-features = false
features = [
    "bevy_ui",
]

[dependencies.chrono]
version = "0.4.38"
optional = true
default-features = false
features = [
    "clock",
]

[dev-dependencies.bevy]
version = "0.15.0"
default-features = true
